src/objects/coocafisa__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>coocafisa_monitoring_activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coocafisa_monitoring_activities_name__c</fullName>
        <label>Coocafisa monitoring activities name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <label>Municipality</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity__c</fullName>
        <label>activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affirmation_describes__c</fullName>
        <label>affirmation describes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cafeteros_conectados__c</fullName>
        <label>cafeteros conectados</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>center_other_producers__c</fullName>
        <label>center other producers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>center_producers__c</fullName>
        <label>center producers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>district__c</fullName>
        <label>district</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <label>end date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>guide_affirmation__c</fullName>
        <label>guide affirmation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guide_name__c</fullName>
        <label>guide name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guide_producers_score__c</fullName>
        <label>guide producers score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leader_score__c</fullName>
        <label>leader score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number_assistants__c</fullName>
        <label>number assistants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>other_producers_cc__c</fullName>
        <label>other producers cc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_producers_name__c</fullName>
        <label>other producers name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_topic__c</fullName>
        <label>other topic</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_training__c</fullName>
        <label>other training</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>producer_cafeteros_conectados__c</fullName>
        <label>producer cafeteros conectados</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>producer_id__c</fullName>
        <description>cédula</description>
        <label>producer id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>producer_score__c</fullName>
        <label>producer score</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason_leader_score__c</fullName>
        <label>reason leader score</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <label>start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>submission__c</fullName>
        <label>submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipName>coocafisa_monitoring_activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>training_name_2__c</fullName>
        <label>training name 2</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>training_name__c</fullName>
        <label>training name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>training_photo__c</fullName>
        <label>training photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>which_other__c</fullName>
        <label>which other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>FMP monitoring activities</label>
    <nameField>
        <label>coocafisa  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMP monitoring activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>